--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Trabalho em Equipe</title>
 </head>
 <body>
-    <H1> Não era ´para colocar os nomes em arquivo separados. 
+    <H1> Não era para colocar os nomes em arquivo separados. 
         apenas criar uma tag (" p ") para cada um</H1>
     <p>Exemplo </p>
     <p> Joanatas Fernandes Barbosa</p>
