--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <p>Faça a correção.</p>
 
 <H2>Exercicio 1 </H2>
+<h2>Criar um pasta para cada aluno com o nome.</h2>
+<h2>Cada aluno irá criar o seu arquivo dentro da sua respectiva pasta.</h2> 
 <h2>Cria o arquivo 001.py</h2>
+<h3>Cria o exercicio 001</h3>
 <p>Faça um algoritmo que solicite o ano que o usuário nasceu, depois disso, 
     faça o programa descrever se o usuário fará ou já fez 18 anos neste ano.</p>
 </body>
